[tool.poetry]
name = "jiramaxx"
version = "0.1.0"
description = "A lightweight console GUI for creating and managing Jira tickets without leaving your keyboard"
authors = []
readme = "jiramaxx/README.md"
license = "MIT"
homepage = "https://github.com/doctoptogonopus/jiramaxx"
repository = "https://github.com/doctoptogonopus/jiramaxx"
keywords = ["jira", "gui", "productivity", "tickets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Bug Tracking",
]
packages = [{include = "jiramaxx"}]

[tool.poetry.dependencies]
python = ">=3.10"
PySimpleGUI = "4.60.5.1"
pyyaml = ">=6.0"
requests = ">=2.28.0"
keyboard = ">=0.13.5"

[tool.poetry.scripts]
jiramaxx = "jiramaxx.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
